# Neurotoolbox

./: README.md  pyproject.toml  requirements.txt
examples/: config_example.yaml
scripts/: run_asymmetry.py  run_followups.py  run_multivariate.py
