[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurotoolbox"
version = "0.1.0"
description = "Generalizable brain–behavior analysis toolkit (asymmetry, normative modeling, multivariate, networks)."
authors = [{name="You"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "networkx>=3.1",
    "pyyaml>=6.0"
]

[tool.setuptools.package-data]
neurotoolbox = ["py.typed"]

[tool.setuptools.packages.find]
where = ["neurotoolbox"]
